FIX: header font size on mobile (#51)
closes #51

--- a/src/layouts/main/styles/markdown.less
+++ b/src/layouts/main/styles/markdown.less
@@ -46,6 +46,7 @@
   }
 
   h1 {
+    font-size : 2.5em; // fallback for Safari, which doesn't support xxx-large
     font-size : xxx-large;
     text-align: center;
   }
